deploy/eks-demo/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postpilot
  namespace: postpilot
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: postpilot
  template:
    metadata:
      labels:
        app.kubernetes.io/name: postpilot
    spec:
      serviceAccountName: postpilot
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app.kubernetes.io/name: postpilot
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app.kubernetes.io/name: postpilot
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: postpilot
          image: 778183943831.dkr.ecr.eu-west-1.amazonaws.com/postpilot:60471264bbb3a8d5025b00064bcbfcdd045c4dda-30850370689
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            readOnlyRootFilesystem: true
            runAsNonRoot: true
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 30
            periodSeconds: 20
          volumeMounts:
            - name: tmp
              mountPath: /tmp
            - name: secrets-store
              mountPath: /mnt/secrets-store
              readOnly: true
      volumes:
        - name: tmp
          emptyDir: {}
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: postpilot-application-secrets
